--- a/Index.html
+++ b/Index.html
@@ -3,56 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
-    <title>My weather application</title>
+    <title>Weather Application</title>
   </head>
   <body>
-    <div class="weather-app">
+    <div class="Weather-app">
       <header>
-        <form id="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
-            placeholder="Enter a city.."
+            placeholder="Enter a city..."
             required
-            class="search-input"
-            id="search-input"
+            id="search-form-input"
+            class="search-form-input"
           />
-          <input type="submit" value="Search" class="search-button" />
+          <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div class="current-weather">
+        <div class="weather-app-data">
           <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
-            <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+            <h1 class="weather-app-city" id="city"></h1>
+            <p class="weather-app-details">
+              <span id="time"></span>
+              <span id="description">scattered clouds</span>
+              <br />
+              Humidity: <strong id="humidity"> </strong>, wind:
+              <strong id="wind-speed">/h</strong>
             </p>
           </div>
-          <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value" id="current-temperature"
-              >24</span
-            ><span class="current-temperature-unit">°C</span>
+          <div class="temperature-container">
+            <div id="icon">
+              <img
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+                class="weather-app-icon"
+              />
+            </div>
+            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weather-app-unit">°C</div>
           </div>
         </div>
+
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
-        <p>
-          This project was coded by
-          <a href="https://github.com/lelo24163" target="_blank">Nombulelo Yolanda Ngulube</a> and is
-          <a href="https://github.com/lelo24163/my-weather-app" target="_blank"> on GitHub</a> and
-          <a href="https://nombulelo-shecodes-weather.netlify.app/" target="_blank">hosted on Netlify</a>
-        </p>
+        This was coded by
+        <a href="https://github.com/lelo24163" target="_blank"
+          >Nombulelo Ngulube</a
+        >
+        and is
+        <a
+          href=https://github.com/lelo24163/my-shecodesplus-project"
+          target="_blank"
+          >on GitHub</a
+        >
+        and
+        <a href="https://lustrous-marigold-37ece8.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
-  <script src="src/index.js"></script>
 </html>
