--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
       </main>
       <footer>
         This was coded by
-        <a href="https://github.com/lelo24163" target="_blank"
+        <a href="https://https://github.com/lelo24163?tab=overview&from=2024-11-01&to=2024-11-30" target="_blank"
           >Nombulelo Ngulube</a
         >
         and is
